<resources>
    <string name="app_name">Turtle</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_title">Sign up</string>
    <string name="login_title">Login</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="sign_in_title">Sign in</string>
    <string name="go_to_sign_in">Already have an account? Sign in</string>
    <string name="go_to_sign_up">Don\'t have an account yet? Sign up</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">or</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="create_new_bill">Create new bill</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="new_bill">New Bill</string>
    <string name="edit_bill">Edit Bill</string>
    <string name="save_bill">Save bill</string>
    <string name="field_add_friend_hint">Enter friend email</string>
    <string name="friends">Friends</string>
    <string name="add_new_expense">Add new expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="new_expense">New Expense</string>
    <string name="paid_by">Paid by</string>
    <string name="save_expense">Save Expense</string>
    <string name="decimal_zero">0.00</string>
    <string name="my_total">My total</string>
    <string name="group_total">Group total</string>
    <string name="expenses">Expenses</string>
    <string name="balance">Balance</string>
    <string name="refunds">Refunds</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="paid_for">Paid for</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete account</string>
    <string name="order_by">Order by</string>


    <!--    &lt;!&ndash; Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). &ndash;&gt;-->
<!--    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>-->
<!--    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>-->

</resources>