<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ProgressBar
        android:id="@+id/progress_bar"
        android:indeterminate="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyleHorizontal"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingHorizontal="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/google_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingHorizontal="20dp"
                android:text="@string/sign_in_with_google"
                android:backgroundTint="?attr/colorButtonNormal"
                android:textColor="?attr/textFillColor"
                android:textStyle="bold"
                app:icon="@drawable/google_icon_logo"
                app:iconTint="@color/white"
                app:iconTintMode="multiply"
                android:textAllCaps="false" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">

                <TextView
                    android:id="@+id/divider_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/or" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/divider_text"
                    android:background="?attr/dividerColor"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.8dp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/divider_text"
                    android:background="?attr/dividerColor"
                    />

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                app:boxBackgroundMode="outline">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_email"
                    android:hint="@string/email_input_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/field_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/field_password"
                    android:hint="@string/password_input_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/form_error_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textColor="?attr/errorTextColor"
                android:gravity="center_horizontal" />

            <Button
                android:id="@+id/sign_in_button"
                android:paddingHorizontal="40dp"
                android:paddingVertical="14dp"
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_title"
                android:textSize="16sp"
                android:textAllCaps="false" />
            <TextView
                android:id="@+id/to_sign_up"
                android:paddingTop="10dp"
                android:paddingBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/go_to_sign_up"
                android:linksClickable="true"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>